# Rust-All-In-One

./: .env  .gitignore  Cargo.toml
Actix/: Cargo.toml  db.sql
Actix/SQL/: db2.sql  update_db1.sql
Actix/wasm-client/: Cargo.toml  LICENSE_MIT
Actix/wasm-client/src/: errors.rs  lib.rs
Actix/wasm-client/src/models/: course.rs
Actix/webapp/: .env  Cargo.toml
Actix/webapp/src/: errors.rs  handlers.rs  mod.rs  models.rs  routers.rs
Actix/webapp/static/: register.html  teachers.html
Actix/webservice/: Cargo.toml
Actix/webservice/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
Actix/webservice/src/dbaccess/: course.rs  mod.rs  teacher.rs
Actix/webservice/src/handlers/: course.rs  general.rs  mod.rs  teacher.rs
Actix/webservice/src/models/: course.rs  teacher.rs
DB/: .env  Cargo.toml  db.sql
DB/src/: main.rs
REST_API/: Cargo.toml
REST_API/http/src/: httprequest.rs
REST_API/tcpclient/src/: main.rs
REST_API/tcpserver/src/: main.rs
Rust_web_Base/http/src/: httprequest.rs  httpresponse.rs
Rust_web_Base/httpserver/: Cargo.toml
Rust_web_Base/httpserver/public/: 404.html  health.html  index.html
Rust_web_Base/httpserver/src/: main.rs  server.rs
Rust_web_Base/tcpserver/src/: main.rs
http/src/: lib.rs
httpserver/data/: orders.json
httpserver/src/: handler.rs  router.rs
tcpclient/src/: main.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT  package-lock.json
wasm-game-of-life/src/: lib.rs
