[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
actix-rt = "2.6.0"
awc = "3.0.0-beta.21"
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tera = "1.15.0"

[[bin]]
name = "svr"