[package]
name = "webservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4"
actix-rt = "2.6.0"
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
openssl = {version = "0.10.38", features = ["vendored"]}
sqlx = {version = "0.5.11", default_features = false ,features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}

[[bin]]
name = "teacher-service"